--- a/README.Rmd
+++ b/README.Rmd
@@ -10,6 +10,6 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Install
 
 ```{r}
-devtools::install_github("GV-CEPESP/tse_orgaos")
+devtools::install_github("GV-CEPESP/tseorgaosR")
 ```
 
